--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3290,13 +3290,10 @@
       <p>Break Day</p>
       <br><br>
       <h2 id="week27">Week 27</h2> <br><br><br>
-      <h3>Day 184: July 3 2022 - Day 185: July 4 2022</h3><br>
+      <h3>Day 184: July 3 2022 - Day 187: July 6 2022</h3><br>
       <p>
         Break Days <br><br>
       </p>
-      <br><br>
-      <h3>Day 186: July 5 - Day 187: July 6</h3><br>
-      <p>Break Days</p>
       <br><br>
       <h3>Day 188: July 7 2022</h3><br>
       <p>
@@ -3313,6 +3310,18 @@
             <a href="https://medium.com/@gd_daredevil/how-i-hacked-wi-fi-at-railway-station-to-get-free-internet-a82cad29bb93" target="_blank">How I ‘hacked’ Wi-Fi at Railway Station to get free internet?</a> : Ganesh Datta <br><br>
             <a href="https://popalltheshells.medium.com/how-i-hacked-a-health-institution-domain-admin-compromise-34ec3e5debb5" target="_blank">HOW I HACKED A HEALTH INSTITUTION [Domain Admin Compromise]</a> : popalltheshells <br><br>
             <a href="https://medium.com/@plaintextpasswords/stack-buffer-overflow-to-remote-code-execution-bof-rce-c4e323f3d9ef" target="_blank">Stack Buffer Overflow to Remote Code Execution | BOF RCE</a> : Plaintext Passwords <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 189: July 8 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/dns-in-active-directory-dcb93b10c3f3" target="_blank">DNS in Active Directory</a> : Hacktivities <br><br>
+            <a href="https://medium.com/@yashshirke7806/how-i-found-unauthorized-bypass-rce-on-my-company-portal-928995f9803c" target="_blank">How i Found Unauthorized Bypass RCE</a> : Yashshirke <br><br>
+            <a href="https://infosecwriteups.com/how-i-passed-my-oscp-exam-first-try-with-no-prior-hacking-experience-19029432e7b9" target="_blank">How i passed my OSCP exam first try with no prior hacking experience</a> : Thexxsrat <br><br>
+            <a href="https://infosecwriteups.com/undetected-from-hackthebox-detailed-walkthrough-82847eadf7a7" target="_blank">Undetected from HackTheBox — Detailed Walkthrough</a> : Pencer <br><br>
           </p>      
         <br><br>
       </p>
