--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3326,6 +3326,10 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 190: July 9 2022</h3>
+      <p>
+        Collin College Security+ Class <br><br>
+      </p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
