--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3329,7 +3329,15 @@
       <h3>Day 190: July 9 2022</h3>
       <p>
         Collin College Security+ Class <br><br>
+        <a href="https://www.comptia.org/training/certmaster-labs/security" target="_blank">CompTIA CertMaster Labs for Security+ (SY0-601)</a><br><br> 
       </p>
+      <br><br>
+      <h3>Day 191: July 10 2022</h3>
+      <p>
+        Collin College Security+ Class <br><br>
+        <a href="https://www.comptia.org/training/certmaster-labs/security" target="_blank">CompTIA CertMaster Labs for Security+ (SY0-601)</a><br><br> 
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
