--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -97,8 +97,18 @@
                 <a href="#week24">Week 24</a>
                 <a href="#week25">Week 25</a>
                 <a href="#week26">Week 26</a>
+              </div>
+            </div>
+          </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">July</button>
+              <div class="dropdown-content">
+                <a href="#week27">Week 27</a>
+                <a href="#week28">Week 28</a>
                 <!--
-                <a href="#week22">Week 22</a>
+                <a href="#week25">Week 25</a>
+                <a href="#week26">Week 26</a>
                 -->
               </div>
             </div>
@@ -3326,16 +3336,37 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 190: July 9 2022</h3>
+      <h3>Day 190: July 9 2022</h3><br><br>
       <p>
         Collin College Security+ Class <br><br>
         <a href="https://www.comptia.org/training/certmaster-labs/security" target="_blank">CompTIA CertMaster Labs for Security+ (SY0-601)</a><br><br> 
       </p>
       <br><br>
-      <h3>Day 191: July 10 2022</h3>
+      <h3>Day 191: July 10 2022</h3><br><br>
       <p>
         Collin College Security+ Class <br><br>
         <a href="https://www.comptia.org/training/certmaster-labs/security" target="_blank">CompTIA CertMaster Labs for Security+ (SY0-601)</a><br><br> 
+      </p>
+      <br><br>
+      <h2 id="week28">Week 28</h2> <br><br><br>
+      <h3>Day 192: July 11 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/lateralmovementandpivoting" target="_blank">Lateral Movement and Pivoting</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/committed" target="_blank">Committed</a> : TryHackMe <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://aravind07.medium.com/how-burpsuite-pro-helped-me-to-get-a-5-digit-bounty-cefd2f04e18b" target="_blank">How Burpsuite-pro helped me to get a 5 digit Bounty !</a> : Gnana Aravind <br><br>
+            <a href="https://ahmdhalabi.medium.com/pii-disclosure-of-apple-users-10k-d1e3d29bae36" target="_blank">PII Disclosure of Apple Users ($10k)</a> : Ahmad Halabi <br><br>
+            <a href="https://medium.com/swlh/building-an-active-directory-lab-part-1a-automatedlab-fc2399ebe5be" target="_blank">Building an Active Directory Lab — Part 1A: AutomatedLab</a> : drunkrhin0 <br><br>
+            <a href="https://itsc0rg1.medium.com/bsidessf-2022-ctf-challenge-write-ups-cd75ebb7b7ea" target="_blank">BSidesSF 2022 CTF Challenge Write-ups</a> : its C0rg1 <br><br>
+            <a href="https://infosecwriteups.com/how-i-hacked-my-college-server-738f038712c3" target="_blank">How I Hacked My College Server?</a> : Krishnadev P Melevila <br><br>
+          </p>      
+        <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
