--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3369,6 +3369,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 193: July 12 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/164" target="_blank">No Place To Hide</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/challenges/187" target="_blank">Persistence</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/challenges/166" target="_blank">Ransom</a> : HackTheBox <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://systemweakness.com/exploiting-stack-buffer-overflow-step-by-step-reverse-engineering-aed4c1c4eb7d" target="_blank">Exploiting Stack Buffer Overflow| Step by Step | Reverse Engineering</a> : Medusa <br><br>
+            <a href="https://medium.com/@tejas.kand.45/a-simple-buffer-overflow-demonstration-part-1-9e1b88686610" target="_blank">A Simple Buffer Overflow Demonstration — Part 1</a> : Tejas Kand <br><br>
+            <a href="https://mg997.medium.com/lets-defend-dfir-http-basic-auth-writeup-c6407887c370" target="_blank">Let’s Defend DFIR Http Basic Auth — writeup.</a> : Marcin Górski <br><br>
+            <a href="https://ekimisik.medium.com/basic-malware-analysis-2-ca23f7bab9b9" target="_blank">Basic Malware Analysis 2</a> : Baron <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
