--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3389,6 +3389,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 194: July 13 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/Trick" target="_blank">Trick</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/lateralmovementandpivoting" target="_blank">Lateral Movement and Pivoting</a> : TryHackMe <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/hybrid-analyst/summary-of-iranian-advanced-persistent-team-apt-34-7624d213d20e" target="_blank">Summary of Iranian Advanced Persistent Threat (APT) 34</a> : Michael Lortz <br><br>
+            <a href="https://infosecwriteups.com/how-i-could-have-accessed-all-your-private-videos-photos-saved-inside-your-device-without-even-1a7e455ddcc8" target="_blank">How I could have accessed all your private videos/photos saved inside your device without even unlocking it?</a> : Samip Aryal <br><br>
+            <a href="https://medium.com/@nidhipanchal719/open-redirect-to-xss-in-united-nation-website-f4394aa6ed04" target="_blank">Open Redirect to XSS in United Nation Website</a> : Nidhi panchal <br><br>
+            <a href="https://medium.com/@casmpy/how-i-hacked-the-jee-coaching-website-and-shutdown-the-class-live-stream-e6eb8e1d22ac" target="_blank">How I hacked the JEE coaching Website and get DB access</a> : Navjot Singh <br><br>
+            <a href="https://medium.com/@dw3113r/how-to-pass-your-oscp-exam-new-exam-format-be89ca04edad" target="_blank">How To Pass Your OSCP Exam (New Exam Format)</a> : Dw3113r <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
