--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3409,6 +3409,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 195: July 14 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.comptia.org/training/certmaster-labs/security" target="_blank">CompTIA CertMaster Labs for Security+ (SY0-601)</a><br><br> 
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/r3d-buck3t/kerberos-attacks-as-rep-roasting-2549fd757b5" target="_blank">Kerberos Attacks — AS-REP Roasting</a> : Nairuz Abulhul <br><br>
+            <a href="https://medium.com/@prince0f4llsaiyanz/road-to-oscp-whats-next-1e847d56a0ea" target="_blank">Road to OSCP — What’s Next?</a> : prince0f4llsaiyanz <br><br>
+            <a href="https://medium.com/@Sophtix-Research/cybonet-unrestricted-file-upload-to-remote-code-execution-6ea432996502" target="_blank">Cybonet — Unrestricted File Upload to Remote Code Execution</a> : Moriel Harush <br><br>
+            <a href="https://medium.com/@satyampathania14/find-ssrf-lfi-xss-using-httpx-waybackurls-gf-gau-qsreplace-1e70b15f7c30" target="_blank">Find SSRF , LFI , XSS using httpx , waybackurls , gf , gau , qsreplace</a> : Satyam Pathania <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
