--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3426,6 +3426,19 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 196: July 15 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/@wicked_picker/deploying-ransomware-with-a-weaponized-usb-device-c7077e9af07a" target="_blank">Deploying Ransomware with a Weaponized USB Device</a> : fatman <br><br>
+            <a href="https://systemweakness.com/kerberoasting-part-2-discovery-and-attack-765c9805e266" target="_blank">Kerberoasting — Part 2: Discovery and attack</a> : Manish Kumar <br><br>
+            <a href="https://medium.com/trabe/rubber-ducky-learning-about-keystroke-injection-324f462f80fa" target="_blank">Rubber Ducky: Learning About the Keystroke Injection</a> : Alejandro González <br><br>
+            <a href="https://medium.com/@somedieyoung/kimsuky-apt-analysis-d108cd1d8fee" target="_blank">Kimsuky Analysis</a> : somedieyoung <br><br>
+            <a href="https://medium.com/ax1al/volatility-wannacry-5845957948b6" target="_blank">Volatility & WannaCry</a> : somedieyoung <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
