--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -106,8 +106,8 @@
               <div class="dropdown-content">
                 <a href="#week27">Week 27</a>
                 <a href="#week28">Week 28</a>
+                <a href="#week29">Week 29</a>
                 <!--
-                <a href="#week25">Week 25</a>
                 <a href="#week26">Week 26</a>
                 -->
               </div>
@@ -3439,6 +3439,15 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 197: July 16 2022 - Day 198: July 17</h3><br>
+      <p>
+        Collin College Security+ Class <br><br>
+        <a href="https://www.comptia.org/training/certmaster-labs/security" target="_blank">CompTIA CertMaster Labs for Security+ (SY0-601)</a><br><br> 
+      </p>
+      <br><br>
+      <h2 id="week29">Week 29</h2> <br><br><br>
+      <h3>Day 199: July 18 2022 - Day 205 July 24 2022</h3><br>
+      <p>Break Week</p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
