--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -107,9 +107,7 @@
                 <a href="#week27">Week 27</a>
                 <a href="#week28">Week 28</a>
                 <a href="#week29">Week 29</a>
-                <!--
-                <a href="#week26">Week 26</a>
-                -->
+                <a href="#week30">Week 30</a>
               </div>
             </div>
           </li>
@@ -3447,7 +3445,12 @@
       <br><br>
       <h2 id="week29">Week 29</h2> <br><br><br>
       <h3>Day 199: July 18 2022 - Day 205 July 24 2022</h3><br>
-      <p>Break Week</p>
+      <p>Break Week</p><br><br>
+      <br><br>
+      <h2 id="week30">Week 30</h2> <br><br><br>
+      <h3>Day 206: July 25 2022 - Day 207 July 26 2022</h3><br>
+      <p>Break Days</p><br><br>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
