--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3451,6 +3451,18 @@
       <h3>Day 206: July 25 2022 - Day 208 July 27 2022</h3><br>
       <p>Break Days</p><br><br>
       <br><br>
+      <h3>Day 209: July 28 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/@akashtesla/hacking-oscp-roadmap-2022-ad-included-a0a6db73d251" target="_blank">Hacking OSCP ! Roadmap 2022 (AD included)</a> : Akash Gupta <br><br>
+            <a href="https://medium.com/@tariqrafiqkehar1/otp-bypass-via-response-manipulation-cda985e37e65" target="_blank">OTP Bypass via Response Manipulation</a> : Tariq Rafiq Kehar <br><br>
+            <a href="https://medium.com/@mahbuba.shahrin/what-is-digital-forensics-e20957a002e4" target="_blank">What is Digital Forensics?</a> : Mahbuba Shahrin <br><br>
+            <a href="https://infosecwriteups.com/finding-0-days-in-enterprise-application-471a409ade8d" target="_blank">Finding 0-days in Enterprise Application</a> : Dhanesh Dodia - HeyDanny <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
