--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3463,6 +3463,11 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 210: July 29 2022</h3><br>
+      <p>
+        Break Day <br></br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
