--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3463,9 +3463,21 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 210: July 29 2022</h3><br>
+      <h3>Day 210: July 30 2022</h3><br>
       <p>
-        Break Day <br></br>
+        Break Days <br></br>
+      </p>
+      <br><br>
+      <h3>Day 211: July 31 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/story-of-my-first-valid-critical-bug-22029115f8d7" target="_blank">Good things takes time | Story of my first “valid” critical bug!</a> : Kr1shna 4garwal <br><br>
+            <a href="https://medium.com/@dw3113r/active-directory-attack-cheat-sheet-ea9e9744028d" target="_blank">Active Directory Attack Cheat Sheet</a> : Dw3113r <br><br>
+            <a href="https://systemweakness.com/i-created-a-ransomware-4ebdfcdc0898" target="_blank">I Created a Ransomware!!!</a> : VirusZsWarning <br><br>
+            <a href="https://infosecwriteups.com/htb-business-ctf-e388db78649" target="_blank">Thirukrishnan</a> : <br><br>
+          </p>      
+        <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
