--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3463,12 +3463,12 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 210: July 30 2022</h3><br>
+      <h3>Day 210: July 29 2022 - Day 211: July 30 2022</h3><br>
       <p>
         Break Days <br></br>
       </p>
       <br><br>
-      <h3>Day 211: July 31 2022</h3><br>
+      <h3>Day 212: July 31 2022</h3><br>
       <p>
         <h5>Blogs Reads</h5>
           <p>   
@@ -3476,6 +3476,25 @@
             <a href="https://medium.com/@dw3113r/active-directory-attack-cheat-sheet-ea9e9744028d" target="_blank">Active Directory Attack Cheat Sheet</a> : Dw3113r <br><br>
             <a href="https://systemweakness.com/i-created-a-ransomware-4ebdfcdc0898" target="_blank">I Created a Ransomware!!!</a> : VirusZsWarning <br><br>
             <a href="https://infosecwriteups.com/htb-business-ctf-e388db78649" target="_blank">Thirukrishnan</a> : <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 213: August 1 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/quotient" target="_blank">Quotient</a> : TryHackMe <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/lets-understand-path-traversal-vulnerabilities-e4263dcb4e39" target="_blank">Let’s Understand Path Traversal Vulnerabilities</a> : Security Lit Limited <br><br>
+            <a href="https://infosecwriteups.com/walkthrough-phonebook-hack-the-box-web-challenge-b853924b5542" target="_blank">How to NOT keep your Active Directory safe.</a> : Roberto <br><br>
+            <a href="https://medium.com/@turkishhoodie010/network-monitoring-and-incident-response-58356a049c5a" target="_blank">Network Monitoring and Incident response</a> : Ahmet Göker <br><br>
+            <a href="https://levelup.gitconnected.com/how-to-make-an-amazing-programming-resume-56f81d510d83" target="_blank">How to Make an Amazing Programming Resume</a> : Emmanuel Tejeda <br><br>
+            <a href="https://medium.com/@madfoxsec/quotient-thm-writeup-df2b514ebc7e" target="_blank">Quotient (thm) writeup</a> : Madfoxsec <br><br>
           </p>      
         <br><br>
       </p>
