--- a/WebPages/blogs.html
+++ b/WebPages/blogs.html
@@ -38,8 +38,8 @@
     <div class="container text-white">
       <div class="des">
         <h1>Blogs</h1> <br><br>
-        <a href="https://hackersarcade.com/blog/the-mitre-att&ck-framework/" class="text-decoration-none text-white" target="_blank"><h3>The MITRE ATT&CK Framework</h3></a><small><span class="badge bg-success">June 2 2022 </span></small><br><br><br><br>
-        <a href="https://hackersarcade.com/blog/noobs-guide-to-webapp-pentesting/" class="text-decoration-none text-white" target="_blank"><h3>Noobs Guide to Web Application Pentesting</h3></a><small><span class="badge bg-info">March 30 2021 </span></small><br><br>
+        <a href="/WebPages/MITRE ATT&CK Blog.pdf" class="text-decoration-none text-white" target="_blank"><h3>The MITRE ATT&CK Framework</h3></a><small><span class="badge bg-success">June 2 2022 </span></small><br><br><br><br>
+        <a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none text-white" target="_blank"><h3>Noobs Guide to Web Application Pentesting</h3></a><small><span class="badge bg-info">March 30 2021 </span></small><br><br>
       </div>
     </div>
   </center>
