--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3499,6 +3499,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 214: August 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://debprasadbanerjee502.medium.com/gauing-nuclei-for-instant-bounties-7a8a07979fff" target="_blank">Gauing+Nuclei for Instant Bounties</a> : Ravaan <br><br>
+            <a href="https://medium.com/@720922/a-developers-nightmare-story-of-a-simple-idor-and-some-poor-fixes-worth-1125-5ead70b0a1de" target="_blank">A Developer’s Nightmare: Story of a simple IDOR and some poor fixes worth $1125</a> : Marcos IAF <br><br>
+            <a href="https://medium.com/@talhakarakumru/how-i-gained-access-to-a-finance-companys-accounts-session-hijacking-2c6c5d9d84bd" target="_blank">How I Gained Access To A Finance Company’s Accounts (Session Hijacking)</a> : Talha Karakumru <br><br>
+            <a href="https://medium.com/@alfalahum/threat-hunting-like-a-detective-559c35b7f6c1" target="_blank">Threat Hunting Like A Detective</a> : Md. Abdullah Al Mamun <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
