--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3503,7 +3503,8 @@
       <p>
         <h5>My Activities</h5>
           <p>
-
+            <a href="https://tryhackme.com/room/olympusroom" target="_blank">Olympus</a> : TryHackMe <br><br>
+            Security+ <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
