--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3517,6 +3517,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 215: August 3 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/olympusroom" target="_blank">Olympus</a> : TryHackMe <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/why-this-simple-mistake-earned-a-5000-bug-bounty-from-reddit-d906cb46c60e" target="_blank">Why this SIMPLE mistake earned a $5000 bug bounty from Reddit</a> : Roberto <br><br>
+            <a href="https://medium.com/@turkishhoodie010/narnia-binary-exploitation-walkthrough-c4b54fa044d6" target="_blank">Narnia(binary exploitation) walkthrough</a> : Ahmet Göker <br><br>
+            <a href="https://orhanoztasbir.medium.com/golden-ticket-attack-explaining-from-the-blue-team-perspective-411361ca7a22" target="_blank">Golden Ticket Attack Explaining (From The Blue Team Perspective)</a> : Orhan Öztaş <br><br>
+            <a href="https://systemweakness.com/kerberoasting-part-1-lab-setup-6e2a6fa15b93" target="_blank">Kerberoasting — Part 1: Lab setup</a> : Manish Kumar <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
