--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3535,6 +3535,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 216: August 4 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/olympusroom" target="_blank">Olympus</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/btlo-investigation-solutions/btlo-malicious-powershell-analysis-350bee4606b6" target="_blank">BTLO —Malicious PowerShell Analysis</a> : Chris Eastwood <br><br>
+            <a href="https://medium.com/@tejas.kand.45/a-simple-buffer-overflow-demonstration-part-2-d6693901048f" target="_blank">A Simple Buffer Overflow Demonstration — Part 2</a> : Tejas Kand <br><br>
+            <a href="https://faun.pub/explaining-tcp-32fe39824e07" target="_blank">Explaining TCP</a> : Arth Kumar <br><br>
+            <a href="https://systemweakness.com/privilege-escalation-with-fail2ban-nopasswd-d3a6ee69db49" target="_blank">Privilege Escalation with fail2ban nopasswd</a> : JAY BHATT <br><br>
+            <a href="https://medium.com/@0xskar/active-directory-basics-80b2b3c4d713" target="_blank">Active Directory Basics</a> : 0xskar <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
