--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3553,6 +3553,11 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 217: August 5 2022 - Day 219: August 7 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
