--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/Python-Programming" class="text-decoration-none" target="_blank">Python Programming</strong></a></small> <br><br>
       <br><br>
       <h1 id="work-exp" style="color:DodgerBlue">EXPERIENCE</h1> <br>
-      <a href="https://hackersarcade.com/" target="_blank"><img src="/img/hackers-arcade.png" alt="HACKERS ARCADE" width="250" height="200"></a>
+      <a href="https://hackersarcade.com/" target="_blank"><img src="/img/hackers-arcade.png" alt="HACKERS ARCADE" width="250" height="200"></a><br><br>
       <p class="lead" style="color:red"><strong>2021 - Current | Security Researcher @ Hackers Arcade</strong></p>
       <p>
         Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. 
         It also involves security research and working on different projects that helps advance the cyber security community. 
       </p>
       <br><br>
-      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="200" height="200"></a><br><br>
+      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/CSCTransparent.png" alt="COMPTIA" width="350" height="350"></a>
       <p class="lead" style="color:red"><strong>2022 - Current | Competitions Coordinator @ CompTIA Student Chapter, University of Texas at San Antonio</strong></p>
       <p>
         - Responsible for coordinating all aspects that go into preparing for a cybersecurity competition. <br><br>
