--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -111,6 +111,19 @@
               </div>
             </div>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">August</button>
+              <div class="dropdown-content">
+                <a href="#week31">Week 31</a>
+                <a href="#week32">Week 32</a>
+                <!--
+                <a href="#week29">Week 29</a>
+                <a href="#week30">Week 30</a>
+                -->
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse" id="navbar">
@@ -3480,6 +3493,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week31">Week 31</h2> <br><br><br>
       <h3>Day 213: August 1 2022</h3><br>
       <p>
         <h5>My Activities</h5>
@@ -3553,9 +3567,20 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 217: August 5 2022 - Day 219: August 9 2022</h3><br>
+      <h3>Day 217: August 5 2022 - Day 219: August 7 2022</h3><br>
       <p>
         Break Days <br><br>
+      </p>
+      <br><br>
+      <h2 id="week32">Week 32</h2> <br><br><br>
+      <h3>Day 220: August 8 2022 - Day 222: August 10 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
+      <h3>Day 223: August 11 2022</h3><br>
+      <p>
+        Security+ <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
