--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -117,8 +117,8 @@
               <div class="dropdown-content">
                 <a href="#week31">Week 31</a>
                 <a href="#week32">Week 32</a>
+                <a href="#week33">Week 33</a>
                 <!--
-                <a href="#week29">Week 29</a>
                 <a href="#week30">Week 30</a>
                 -->
               </div>
@@ -3582,6 +3582,19 @@
       <p>
         Security+ <br><br>
       </p>
+      <br><br>
+      <h3>Day 224: August 12 2022 - Day 226: August 14 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
+      <h2 id="week33">Week 33</h2> <br><br><br>
+      <h3>Day 227: August 15 2022 - Day 230: August 18 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+
+          </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
