--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3593,7 +3593,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
-            Security+
+            Security+ <br><br>
           </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
