--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3596,6 +3596,11 @@
             Security+ <br><br>
           </p>
       <br><br>
+      <h3>Day 231: August 19 2022</h3><br>
+      <p>
+        Took and Passed the CompTIA Security+ SY0-601 Exam! <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
