--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3601,6 +3601,11 @@
         Took and Passed the CompTIA Security+ SY0-601 Exam! <br><br>
       </p>
       <br><br>
+      <h3>Day 232: August 19 2022 - Day 233: August 21 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
