--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -118,9 +118,7 @@
                 <a href="#week31">Week 31</a>
                 <a href="#week32">Week 32</a>
                 <a href="#week33">Week 33</a>
-                <!--
-                <a href="#week30">Week 30</a>
-                -->
+                <a href="#week34">Week 34</a>
               </div>
             </div>
           </li>
@@ -3604,6 +3602,12 @@
       <h3>Day 232: August 19 2022 - Day 233: August 21 2022</h3><br>
       <p>
         Break Days <br><br>
+      </p>
+      <br><br>
+      <h2 id="week34">Week 34</h2> <br><br><br>
+      <h3>Day 234: August 22 2022</h3><br>
+      <p>
+        First Day of Classes! <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
