--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3622,6 +3622,25 @@
           </p>      
         <br><br>
       </p>
+      <br><br>
+      <h3>Day 236: August 24 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/hackervshacker" target="_blank">Hacker vs. Hacker</a> : TryHackMe <br><br>
+          </p>
+          <br><br>
+      </p>
+      <br><br>
+      <h3>Day 237: August 25 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/games/koth" target="_blank">King of the Hill</a> : TryHackMe <br><br>
+          </p>
+          <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
