--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3641,9 +3641,9 @@
           <br><br>
       </p>
       <br><br>
-      <h3>Day 238: August 27 2022</h3><br>
+      <h3>Day 238: August 27 2022 - Day 239: August 28 2022</h3><br>
       <p>
-        Break Day <br><br>
+        Break Days <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
