--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3646,6 +3646,26 @@
         Break Days <br><br>
       </p>
       <br><br>
+      <h2 id="week35">Week 35</h2> <br><br><br>
+      <h3>Day 240: August 29 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/confidential" target="_blank">Confidential</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/hackervshacker" target="_blank">Hacker vs. Hacker</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/this-is-how-he-could-hijack-reddit-accounts-with-just-one-click-a-10-000-bug-bounty-7fd8d54d5582" target="_blank">This is how he could hijack Reddit accounts with just ONE click: a $10,000 bug bounty</a> : Roberto <br><br>
+            <a href="https://infosecwriteups.com/intro-to-digital-forensics-f41093f37a05" target="_blank">Intro to Digital Forensics</a> : Mukilan Baskaran <br><br>
+            <a href="https://needablackcoffee.medium.com/my-top-10-linux-commands-for-debugging-server-issue-d8b179249779" target="_blank">My top 10 Linux commands for debugging server issue</a> : Rafael Zimmermann <br><br>
+            <a href="https://medium.com/@tejas.kand.45/buffer-overflow-understanding-cpu-registers-d351809ef331" target="_blank">Buffer Overflow: Understanding CPU Registers</a> : Tejas Kand <br><br>
+            <a href="https://musyokaian.medium.com/hacker-vs-hacker-tryhackme-walkthrough-de45d24bdfce" target="_blank">Hacker vs. Hacker TryHackMe Walkthrough</a> : Musyoka Ian <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
