--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3666,6 +3666,12 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 241: August 30 2022</h3><br>
+      <h5>My Activities</h5>
+      <p>
+        <a href="https://tryhackme.com/room/enumerationpe" target="_blank">Enumeration</a> : TryHackMe <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
