--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3672,6 +3672,12 @@
         <a href="https://tryhackme.com/room/enumerationpe" target="_blank">Enumeration</a> : TryHackMe <br><br>
       </p>
       <br><br>
+      <h3>Day 242: August 31 2022</h3><br>
+      <h5>My Activities</h5>
+      <p>
+        <a href="https://tryhackme.com/room/winadbasics" target="_blank">Active Directory Basics</a> : TryHackMe <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
