--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3678,6 +3678,23 @@
         <a href="https://tryhackme.com/room/winadbasics" target="_blank">Active Directory Basics</a> : TryHackMe <br><br>
       </p>
       <br><br>
+      <h3>Day 243: September 1 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/winadbasics" target="_blank">Active Directory Basics</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/another-day-another-idor-vulnerability-5000-reddit-bug-bounty-22a75003d999" target="_blank">Another day, Another IDOR vulnerability— $5000 Reddit Bug Bounty</a> : Roberto <br><br>
+            <a href="https://infosecwriteups.com/post-exploitation-basics-in-active-directory-enviorment-by-hashar-mujahid-d46880974f87" target="_blank">Post-Exploitation Basics In Active Directory Environment By Hashar Mujahid</a> : Hashar Mujahid <br><br>
+            <a href="https://medium.com/@seeu-inspace/how-i-earned-500-by-uploading-a-file-write-up-of-one-of-my-first-bug-bounty-c174cf8ea553" target="_blank">How I earned $500 by uploading a file: write-up of one of my first bug bounty</a> : Riccardo Malatesta <br><br>
+            <a href="https://medium.com/@Haddock22/start-your-career-in-cybersecurity-hackaday-ghidra-exercises-walkthrough-part-1a-b552f3fdc67c" target="_blank">Start Your Career in Ethical Hacking: Hackaday Ghidra Exercises Walkthrough Part 1A</a> : Haddock <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
