--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3695,6 +3695,11 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 244: September 2 2022 - Day 248: September 5 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
