--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3695,9 +3695,20 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 244: September 2 2022 - Day 249: September 7 2022</h3><br>
+      <h3>Day 244: September 2 2022 - Day 246: September 4 2022</h3><br>
       <p>
         Break Days <br><br>
+      </p>
+      <br><br>
+      <h3>Day 247: September 5 2022 - Day 248: September 6 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
+      <h3>Day 249: September 7 2022</h3><br>
+      <h5>My Activities</h5>
+      <p>
+        <a href="https://tryhackme.com/room/agentt" target="_blank">Agent T</a> : TryHackMe <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
