--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -122,6 +122,19 @@
               </div>
             </div>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">September</button>
+              <div class="dropdown-content">
+                <a href="#week35">Week 35</a>
+                <a href="#week36">Week 36</a>
+                <!--
+                <a href="#week33">Week 33</a>
+                <a href="#week34">Week 34</a>
+                -->
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse" id="navbar">
@@ -3700,6 +3713,7 @@
         Break Days <br><br>
       </p>
       <br><br>
+      <h2 id="week36">Week 36</h2> <br><br><br>
       <h3>Day 247: September 5 2022 - Day 248: September 6 2022</h3><br>
       <p>
         Break Days <br><br>
@@ -3709,6 +3723,11 @@
       <h5>My Activities</h5>
       <p>
         <a href="https://tryhackme.com/room/agentt" target="_blank">Agent T</a> : TryHackMe <br><br>
+      </p>
+      <br><br>
+      <h3>Day 250: September 8 2022 - Day 253: September 11 2022</h3><br>
+      <p>
+        Break Days <br><br>
       </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
