--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3730,6 +3730,24 @@
         Break Days <br><br>
       </p>
       <br><br>
+      <h2 id="week37">Week 37</h2> <br><br><br>
+      <h3>Day 254: September 12 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/ettubrute" tagret="_blank">Brute</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/razorblack-active-directory-room-from-tryhackme-by-hashar-mujahid-52985f24d929" target="_blank">RazorBlack: Active Directory Room From TryHackMe By Hashar Mujahid</a> : Hasher Mujahid <br><br>
+            <a href="https://systemweakness.com/rooting-jenkins-remote-code-execution-on-a-live-bug-bounty-target-fc2c12d89a2e" target="_blank">From Shodan to RCE: That one time I hacked a Fortune 500 company.</a> : vimanari_ <br><br>
+            <a href="https://infosecwriteups.com/enterprise-active-directory-room-from-tryhackme-87f8738efc96" target="_blank">Enterprise: Active Directory Room From TryHackMe By Hashar Mujahid</a> : Hashar Mujahid <br><br>
+            <a href="https://infosecwriteups.com/phoenix-challenges-stack-zero-f8743cc871ed" target="_blank">Phoenix Challenges — Stack Zero</a> : Nathan Pavlovsky <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
