--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3748,6 +3748,18 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 255: September 13 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/ettubrute" tagret="_blank">Brute</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 256: September 14 2022</h3><br>
+      <p>Break Day</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
