--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3757,8 +3757,8 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 256: September 14 2022</h3><br>
-      <p>Break Day</p>
+      <h3>Day 256: September 14 2022 - Day 257: September 18 2022</h3><br>
+      <p>CPTC Meetings</p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
