--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3757,8 +3757,24 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 256: September 14 2022 - Day 257: September 18 2022</h3><br>
+      <h3>Day 256: September 14 2022 - Day 260: September 18 2022</h3><br>
       <p>CPTC Meetings</p>
+      <br><br>
+      <h2 id="week38">Week 38</h2> <br><br><br>
+      <h3>Day 261: September 19 2022</h3><br>
+      <p>Break Day</p>
+      <br><br>
+      <h3>Day 262: September 20 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://systemweakness.com/letsdefend-soc165-possible-sql-injection-payload-detected-1d4f05fcfa41" target="_blank">LetsDefend SOC165 — Possible SQL Injection Payload Detected Walkthrough</a> : brian j <br><br>
+            <a href="https://gustavshen.medium.com/domain-enumeration-methodology-2408567e2ca" target="_blank">Domain Enumeration Methodology</a> : Gustav Shen <br><br>
+            <a href="https://medium.com/@aditya043k/cyber-security-for-hospitals-health-care-5fcf5ab3bfe9" target="_blank">Cyber Security For Hospitals & Health Care</a> : Aditya Singh <br><br>
+            <a href="https://medium.com/geekculture/breaking-down-a-python-reverse-shell-one-liner-752041733e5f" target="_blank">Breaking Down A Python Reverse Shell One-Liner</a> : Alexis Rodriguez <br><br>
+          </p>      
+        <br><br>
+      </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
