--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3776,6 +3776,12 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 263: September 21 2022</h3><br>
+      <p>CPTC</p> <br><br>
+      <br><br>
+      <h3>Day 264: September 22 2022</h3><br>
+      <p>Intro To CTFs Workshop</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
