--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3780,6 +3780,10 @@
       <h3>Day 264: September 22 2022</h3><br>
       <p>Intro To CTFs Workshop</p>
       <br><br>
+      <h3>Day 267: September 25 2022</h3><br>
+      <p>CPTC</p>
+      <br><br>
+      <h2 id="week39">Week 39</h2> <br><br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
