--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3784,6 +3784,10 @@
       <p>CPTC</p>
       <br><br>
       <h2 id="week39">Week 39</h2> <br><br><br>
+      <p>
+        CPTC <br><br>
+        PWK Course <br><br>
+      </p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
