--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -133,6 +133,15 @@
               </div>
             </div>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">October</button>
+              <div class="dropdown-content">
+                <a href="#week39">Week 39</a>
+                <a href="#week40">Week 40 - 44</a>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse" id="navbar">
@@ -3784,10 +3793,19 @@
       <p>CPTC</p>
       <br><br>
       <h2 id="week39">Week 39</h2> <br><br><br>
+      <h3>Day 268: September 26 2022 - Day 275: October 2</h3><br>
       <p>
         CPTC <br><br>
         PWK Course <br><br>
+        Midterms <br><br>
       </p>
+      <br><br>
+      <h2 id="week40">Week 40 - Week 44</h2> <br>
+      <h3>October</h3><br><br>
+      <p>CPTC</p>
+      <br><br>
+
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
