--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -142,6 +142,14 @@
               </div>
             </div>
           </li>
+          <li class="nav-item">
+            <div class="dropdown">
+              <button class="dropbtn">November</button>
+              <div class="dropdown-content">
+                <a href="#week45">Week 45 - 49</a>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse" id="navbar">
@@ -3803,6 +3811,13 @@
       <h2 id="week40">Week 40 - Week 44</h2> <br>
       <h3>October</h3><br><br>
       <p>CPTC</p>
+      <br><br>
+      <h2 id="week45">Week 45 - Week 49</h2> <br>
+      <h3>November</h3><br>
+      <p>
+      CPTC <br><br>
+      PWK Course <br><br>
+      </p>
       <br><br>
 
       <br><br>
